@@ -9,4 +9,13 @@ binary-indep:
 	-dh_clideps
 	-dh_gtkmodules
 	dh_lisp || true
+# We don't warn about commands inside make conditionals, so none of these
+# get any warnings.
+ifeq "$(USE_PYCENTRAL)" "y"
+	dh_pycentral
+else
+  ifeq "$(USE_PYSUPPORT)" "y"
+	dh_pysupport
+  endif
+endif
 	dh binary-indep --remaining
