@@ -24,6 +24,8 @@ lintian (2.2.14) UNRELEASED; urgency=low
       debhelper 7.0.50.
     + [RA] Don't warn about recently deprecated debhelper commands in
       possibly optional portions of debian/rules.  (Closes: #537607)
+    + [RA] Don't warn about missing build dependencies for commands in
+      possibly optional portions of debian/rules.  (Closes: #537608)
   * checks/description:
     + [RA] Decode descriptions from UTF-8 before checking length.  Thanks,
       Charles Plessy.  (Closes: #537207)
